# ipda-single

./: README.md  app.py  index.html  ipda-historical-replay.py  ipda-live-monitor.py  ipda-predictor.py  ipda_utils.py  quimera-live-monitor.py  quimera-predict-reverse.py  requierements.txt
adelic/: adelic_causal_force_generalizer.py  adelic_choco_schur_router.py  adelic_oracle_app.py  adelic_oracle_master.py  como correr.txt
dashboard/: index.html
ipda-calibration/ipda_package/: Cargo.toml  windows.csv
ipda-calibration/ipda_package/data/: EUR-USD_Minute_2026-03-19_UTC.csv  EUR-USD_Minute_2026-03-23_UTC.csv  EUR-USD_Minute_2026-03-24_UTC.csv  EUR-USD_Minute_2026-03-25_UTC.csv  EUR-USD_Minute_2026-03-26_UTC.csv  EUR-USD_Minute_2026-03-27_UTC.csv  EUR-USD_Minute_2026-03-30_UTC.csv  EUR-USD_Minute_2026-03-31_UTC.csv  EUR-USD_Minute_2026-04-02_UTC.csv  OHVL-IPDA-CONVERT.PY
ipda-calibration/ipda_package/docs/: README.md
ipda-calibration/ipda_package/src/: calibration.rs  detect.rs  lib.rs  loader.rs  main.rs  spectral.rs  topo.rs  types.rs  utils.rs
model/: ipda_model.json  test-modeler.py
