[package]
name = "ipda_calibration"
version = "0.1.0"
edition = "2021"
authors = ["IPDA System"]
description = "IPDA Threshold Calibration — λ₃ Spectral Phase Inversion & H₁ Persistent Homology"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ipda_calibrate"
path = "src/main.rs"

[[bin]]
name = "ipda_detect"
path = "src/detect.rs"

[dependencies]
rustfft = "6.1"
num-complex = "0.4"
statrs = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "=4.4.18", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
csv = "1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
